--- a/dashboard_day.html
+++ b/dashboard_day.html
@@ -3,119 +3,119 @@
 <BODY>
 <H2>&#128010; 192.168.42.241 DNS Ping (Pi-hole)</H3>
 <H3>&#128010; 192.168.42.241 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.42.241_day.png><img src=dnsping_192.168.42.241_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_192.168.42.241_day.png><img src=images/dnsping_192.168.42.241_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 192.168.0.13 DNS Ping (WLAN-Router / Fallback)</H3>
 <H3>&#128010; 192.168.0.13 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.0.13_day.png><img src=dnsping_192.168.0.13_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_192.168.0.13_day.png><img src=images/dnsping_192.168.0.13_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 192.168.0.1 DNS Ping (Vodafone-Station / DMZ)</H3>
 <H3>&#128010; 192.168.0.1 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.0.1_day.png><img src=dnsping_192.168.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_192.168.0.1_day.png><img src=images/dnsping_192.168.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 80.69.96.12 DNS Ping (Vodafone-DNS-Resolver)</H3>
 <H3>&#128010; 80.69.96.12 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_80.69.96.12_day.png><img src=dnsping_80.69.96.12_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_80.69.96.12_day.png><img src=images/dnsping_80.69.96.12_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 1.0.0.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.0.0.1 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_1.0.0.1_day.png><img src=dnsping_1.0.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_1.0.0.1_day.png><img src=images/dnsping_1.0.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 1.1.1.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.1.1.1 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_1.1.1.1_day.png><img src=dnsping_1.1.1.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_1.1.1.1_day.png><img src=images/dnsping_1.1.1.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 8.8.4.4 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.4.4 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_8.8.4.4_day.png><img src=dnsping_8.8.4.4_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_8.8.4.4_day.png><img src=images/dnsping_8.8.4.4_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 8.8.8.8 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.8.8 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_8.8.8.8_day.png><img src=dnsping_8.8.8.8_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_8.8.8.8_day.png><img src=images/dnsping_8.8.8.8_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 45.90.28.39 DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H3>
 <H3>&#128010; 45.90.28.39 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_45.90.28.39_day.png><img src=dnsping_45.90.28.39_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_45.90.28.39_day.png><img src=images/dnsping_45.90.28.39_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 45.90.30.39 DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H3>
 <H3>&#128010; 45.90.30.39 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_45.90.30.39_day.png><img src=dnsping_45.90.30.39_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_45.90.30.39_day.png><img src=images/dnsping_45.90.30.39_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 84.200.69.80 DNS Ping (DNS.Watch)</H3>
 <H3>&#128010; 84.200.69.80 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_84.200.69.80_day.png><img src=dnsping_84.200.69.80_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_84.200.69.80_day.png><img src=images/dnsping_84.200.69.80_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 84.200.70.40 DNS Ping (DNS.Watch)</H3>
 <H3>&#128010; 84.200.70.40 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_84.200.70.40_day.png><img src=dnsping_84.200.70.40_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_84.200.70.40_day.png><img src=images/dnsping_84.200.70.40_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 9.9.9.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 9.9.9.11 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_9.9.9.11_day.png><img src=dnsping_9.9.9.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_9.9.9.11_day.png><img src=images/dnsping_9.9.9.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 149.112.112.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 149.112.112.11 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_149.112.112.11_day.png><img src=dnsping_149.112.112.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_149.112.112.11_day.png><img src=images/dnsping_149.112.112.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 208.67.220.220 DNS Ping (OpenDNS)</H3>
 <H3>&#128010; 208.67.220.220 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_208.67.220.220_day.png><img src=dnsping_208.67.220.220_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_208.67.220.220_day.png><img src=images/dnsping_208.67.220.220_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 208.67.222.222 DNS Ping (OpenDNS)</H3>
 <H3>&#128010; 208.67.222.222 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_208.67.222.222_day.png><img src=dnsping_208.67.222.222_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_208.67.222.222_day.png><img src=images/dnsping_208.67.222.222_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 46.182.19.48 DNS Ping (Digitalcourage)</H3>
 <H3>&#128010; 46.182.19.48 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_46.182.19.48_day.png><img src=dnsping_46.182.19.48_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_46.182.19.48_day.png><img src=images/dnsping_46.182.19.48_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 194.150.168.168 DNS Ping (AS250.net)</H3>
 <H3>&#128010; 194.150.168.168 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_194.150.168.168_day.png><img src=dnsping_194.150.168.168_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_194.150.168.168_day.png><img src=images/dnsping_194.150.168.168_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 5.1.66.255 DNS Ping (Freifunk Muenchen)</H3>
 <H3>&#128010; 5.1.66.255  Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_5.1.66.255_day.png><img src=dnsping_5.1.66.255_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_5.1.66.255_day.png><img src=images/dnsping_5.1.66.255_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 185.150.99.255 DNS Ping (Freifunk Muenchen)</H3>
 <H3>&#128010; 185.150.99.255 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_185.150.99.255_day.png><img src=dnsping_185.150.99.255_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_185.150.99.255_day.png><img src=images/dnsping_185.150.99.255_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 80.241.218.68 DNS Ping (dismail.de)</H3>
 <H3>&#128010; 80.241.218.68 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_80.241.218.68_day.png><img src=dnsping_80.241.218.68_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_80.241.218.68_day.png><img src=images/dnsping_80.241.218.68_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 159.69.114.157 DNS Ping (dismail.de)</H3>
 <H3>&#128010; 159.69.114.157 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_159.69.114.157_day.png><img src=dnsping_159.69.114.157_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_159.69.114.157_day.png><img src=images/dnsping_159.69.114.157_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 176.9.93.198 DNS Ping (dnsforge.de)</H3>
 <H3>&#128010; 176.9.93.198 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_176.9.93.198_day.png><img src=dnsping_176.9.93.198_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_176.9.93.198_day.png><img src=images/dnsping_176.9.93.198_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 176.9.1.117 DNS Ping (dnsforge.de)</H3>
 <H3>&#128010; 176.9.1.117 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_176.9.1.117_day.png><img src=dnsping_176.9.1.117_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_176.9.1.117_day.png><img src=images/dnsping_176.9.1.117_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 94.140.14.14 DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
 <H3>&#128010; 94.140.14.14 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.14_day.png><img src=dnsping_94.140.14.14_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_94.140.14.14_day.png><img src=images/dnsping_94.140.14.14_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 94.140.15.15 DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
 <H3>&#128010; 94.140.15.15 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.15.15_day.png><img src=dnsping_94.140.15.15_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_94.140.15.15_day.png><img src=images/dnsping_94.140.15.15_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 94.140.15.150 DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
 <H3>&#128010; 94.140.14.140 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.140_day.png><img src=dnsping_94.140.14.140_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_94.140.14.140_day.png><img src=images/dnsping_94.140.14.140_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 94.140.14.141 DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
 <H3>&#128010; 94.140.14.141 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.141_day.png><img src=dnsping_94.140.14.141_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_94.140.14.141_day.png><img src=images/dnsping_94.140.14.141_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; 95.215.19.53 DNS Ping (Njalla &#x1F1F8;&#x1F1EA)
 <H3>&#128010; 95.215.19.53 Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_95.215.19.53_day.png><img src=dnsping_95.215.19.53_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=dnsping_95.215.19.53_day.png><img src=images/dnsping_95.215.19.53_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 </BODY>
 </BODY>
