--- a/index_194.150.168.168_as250_net.html
+++ b/index_194.150.168.168_as250_net.html
@@ -3,19 +3,19 @@
 <BODY>
 <H2>194.150.168.168 DNS Ping</H3>
 <H3>194.150.168.168 Hourly Response Times & Loss Stats(5min average)</H3>
-<img src=dnsping_194.150.168.168_hour.png><br>
+<img src=images/dnsping_194.150.168.168_hour.png><br>
 <br>
 <H3>194.150.168.168 Daily Response Times & Loss Stats(5min average)</H3>
-<img src=dnsping_194.150.168.168_day.png><br>
+<img src=images/dnsping_194.150.168.168_day.png><br>
 <br>
 <H3>194.150.168.168 Weekly Response Times & Loss Stats(5min average)</H3>
-<img src=dnsping_194.150.168.168_week.png><br>
+<img src=images/dnsping_194.150.168.168_week.png><br>
 <br>
 <H3>194.150.168.168 Monthly Response Times & Loss Stats(5min average)</H3>
-<img src=dnsping_194.150.168.168_month.png><br>
+<img src=images/dnsping_194.150.168.168_month.png><br>
 <br>
 <H3>194.150.168.168 Yearly Response Times & Loss Stats(5min average)</H3>
-<img src=dnsping_194.150.168.168_year.png><br>
+<img src=images/dnsping_194.150.168.168_year.png><br>
 <br>
 </BODY>
 </HTML>
